kustomize/pvc-mount-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-mount-pod
  namespace: calibre-system
spec:
  containers:
  - name: pvc-05dcddd8-container
    image: busybox
    command: ['sh', '-c', 'sleep 3600']
    volumeMounts:
    - mountPath: /mnt/pvc1
      name: pvc-05dcddd8-volume
  - name: pvc-c41d3717-container
    image: busybox
    command: ['sh', '-c', 'sleep 3600']
    volumeMounts:
    - mountPath: /mnt/pvc2
      name: pvc-c41d3717-volume
  volumes:
  - name: pvc-05dcddd8-volume
    persistentVolumeClaim:
      claimName: calibre-books
  - name: pvc-c41d3717-volume
    persistentVolumeClaim:
      claimName: calibre-config
  restartPolicy: Never
